Fixed td align

--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,7 @@ h2 {
 }
 
 td {
-    vertical-align: baseline;
+    vertical-align: top;
     padding-bottom: 10px;
 }
 
